--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					</div>
 
 
-					<div class="grid__item pos-9" ><div class="grid__item-img landing-img" style="background-image:url(img/landing/08b.avif);"></div></div><div class="grid__item pos-9t"><h2>text text text</h2> 
+					<div class="grid__item pos-9" ><div class="grid__item-img landing-img" style="background-image:url(img/landing/s08b.jpg);"></div></div><div class="grid__item pos-9t"><h2>text text text</h2> 
 					</div>
 
 
