--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<link rel="shortcut icon" href="#">
 		<link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
 		<link rel="stylesheet" type="text/css" href="base.css">
-		<script>document.documentElement.className = "js";
+
+		<!-- <script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
   var e,
@@ -18,7 +19,7 @@ var supportsCssVars = function supportsCssVars() {
   return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e;
 };
 
-supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+supportsCssVars() || alert("Please view this in a modern browser that supports CSS Variables.");</script> -->
 	<script src="base.js"></script>
 	<!-- <script src="jq.js"></script> -->
 
