--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 				<div class="grid">
 
 					<div class="grid__item pos-1">
-					<div class="grid__item-img landing-img" style="background-image:url(img/landing/s03.jpg);"></div></div>
+					<div class="grid__item-img landing-img" style="background-image:url(img/landing/one.jpg);"></div></div>
 					<div class="grid__item pos-1t"><h2>text text text</h2> 
 					</div>
 
