--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 		<link rel="shortcut icon" href="#">
-		<link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
+		<!-- <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.css">
 
 		<script>document.documentElement.className = "js";
