--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 				</div>
 				<div class="frame__links">
 					<a href="#">Coaching</a>
-					<a href="galerie.html">Studio</a>
+					<a href="galerie.html" style="color:purple;">Studio</a>
 					<a href="#">Portfolio</a>
 					<a href="#">Meet Me</a>
 				</div>
