--- a/galerie.html
+++ b/galerie.html
@@ -60,8 +60,8 @@
 
 
                 <div style="position: absolute; width: auto; color: white;  opacity: 0.4; padding: 2em; ">
-                  <h1 style="font-size: 12vw; font-family: sans-serif;">VIA IDA</h1>
-                  <h3 style="font-size: 4vw; font-family: sans-serif;">FEEL THE MAGIC</h3>
+                  <h1 style="font-size: 12vw; ">VIA IDA</h1>
+                  <h3 style="font-size: 4vw;">FEEL THE MAGIC</h3>
               </div>
 
 
