--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 		</div>
         <div class="parent">
   
-            <img src="/img/about/Bild Franziska about me .jpg" style="width:100%; max-width: 600px; padding: 2em; height: auto; " alt="">
+            <img src="img/about/Bild Franziska about me .jpg" style="width:100%; max-width: 600px; padding: 2em; height: auto; " alt="">
 
             <!-- <div class="img" style="background: url(img/about/Bild\ Franziska\ about\ me\ .jpg) center no-repeat; background-size: cover; max-width: 400px;"></div> -->
             
@@ -120,7 +120,7 @@
 </div>
 <div style="width: 100%;background-color: #f1f5f8;">
 
-    <img src="/img/about/pawel-czerwinski-utu66oQU6vI-unsplash.jpg" style="display: block; width:100%; max-width: 600px;  height: auto; margin: auto;" alt="">
+    <img src="img/about/pawel-czerwinski-utu66oQU6vI-unsplash.jpg" style="display: block; width:100%; max-width: 600px;  height: auto; margin: auto;" alt="">
 </div>
 
 <svg class="cursor" width="80" height="80" viewBox="0 0 80 80">
