--- a/philo.html
+++ b/philo.html
@@ -90,7 +90,7 @@
                 <h2>WHAT I BELIEVE IN</h2>
                 <p>Ich glaube, wenn die wahre innere Wirklichkeit erkannt, die Aufmerksamkeit dieser folgt, beginnt das wahre Leben. Ich möchte ermutigen, seine Wahrheiten, Überzeugen, Wünsche und Träume zu leben, das wahre Potential in uns. Es öffnen sich Türen, wie von Zauberhand. </p>
               </div>
-              <img src="/img/philo/JKJ01PREV.jpg" style="width:100%; max-width: 600px; padding: 2em; height: auto;" alt="">
+              <img src="img/philo/JKJ01PREV.jpg" style="width:100%; max-width: 600px; padding: 2em; height: auto;" alt="">
             
                 <!-- <div class="img" style="background: url(img/concept/Bild\ Concept\ Wahrheiten\ gestalten\ Abstrakt.jpg) center center no-repeat; background-size: cover; max-width: 700px; "></div>
             </div> -->
@@ -99,8 +99,8 @@
         <div class="parent"  style="background-color: black; ">
   
             <div style="display: flex; flex-direction: column;">
-                <img src="/img/philo/IMG_E2115.JPG" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
-                <img src="/img/philo/blanche-peulot-73fpQysLaKM-unsplash.jpg" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
+                <img src="img/philo/IMG_E2115.JPG" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
+                <img src="img/philo/blanche-peulot-73fpQysLaKM-unsplash.jpg" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
             </div>
            
             <!-- <div class="img" style="background: url(img/concept/Bild\ Concept\ Wahrheiten\ finden\ Abstrakt.jpg) center center no-repeat; background-size: cover; max-width: 700px; "></div> -->
