--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" href="#">
 		<!-- <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.css">
-
+		<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
 	
 
 
@@ -29,8 +29,32 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 
 </head>
 	<body class="" >
+
+
+
+		<input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+		<label for="menu-icon"></label>
+		<nav class="nav"> 		
+			<ul>
+				<li><a href="index.html"> <h2 style="color: white;">HOME</h2></a></li>
+				<li><h2>COACHING</h2></li>
+				<li><a href="concept.html">CONCEPT</a></li>
+				<li><a href="methods.html">METHODS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="#">IMPULSFRAGEN</a></li>
+				<li><h2>STUDIO</h2></li>
+				<li><a href="galerie.html">GALERIE</a></li>
+				<li><h2>PORTFOLIO</h2></li>
+				<li><a href="philo.html">PHILOSOPHIE</a></li>
+				<li><a href="about.html">ABOUT ME</a></li>
+				<li><a href="kundenstimmen.html">KUND:INNEN</a></li>
+				<li><a href="kontakt.html"> <h2 style="color: white;">Kontakt</h2></a></li>
+			</ul>
+		</nav>
+
+
 		
-		<input type="checkbox" id="main-navigation-toggle" class="btn btn--close" title="Toggle main navigation" />
+		<!-- <input type="checkbox" id="main-navigation-toggle" class="btn btn--close" title="Toggle main navigation" />
 		<label for="main-navigation-toggle">
 		  <span></span>
 		</label>
@@ -42,7 +66,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 				
 			  </li>
 			<li class="menu__item">
-				<a class="menu__link" href="">COACHING</a>
+				<span class="menu__link">COACHING</span>
 				<ul class="submenu">
 				  <li class="menu__item">
 					<a class="menu__link" href="concept.html">Concept</a>
@@ -60,7 +84,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 			  </li>
 
 			  <li class="menu__item">
-				<a class="menu__link" href="#0">STUDIO</a>
+				<span class="menu__link">STUDIO</span>
 				<ul class="submenu">
 				  <li class="menu__item">
 					<a class="menu__link" href="galerie.html">GALERIE</a>
@@ -70,7 +94,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 			  </li>
 
 			  <li class="menu__item">
-				<a class="menu__link" href="#0">PORTFOLIO</a>
+				<span class="menu__link">PORTFOLIO</span>
 				<ul class="submenu">
 				  <li class="menu__item">
 					<a class="menu__link" href="philo.html">Philosophie</a>
@@ -89,7 +113,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 			  <a class="menu__link" href="#0">MEET ME</a>
 			</li>
 		  </ul>
-		</nav>
+		</nav> -->
 		
 		
 
@@ -171,7 +195,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 		</div>
 
 	</div>
-	<div class="parent " style="background-color: black;">
+	<div class="parent " style="background-color: #152A2B;">
 
 		<div class="txt" style="color: white;">
 			<h2>THE VALUE OF CHANGE</h2>
