--- a/philo.html
+++ b/philo.html
@@ -38,7 +38,7 @@
 		</nav>
 		
 		<div>
-			<h1 style="text-align: center; margin-top: 0; padding: 2em;">PHILOSOPHY</h1>
+			<h1 style="text-align: center; margin-top: 0; padding: 2em;">PHILOSOPHIE</h1>
 		</div>
 
         <div class="parent ">
