--- a/methods.html
+++ b/methods.html
@@ -12,8 +12,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="base.css">
 
-		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -99,8 +100,8 @@
 		
 		<script src="new.js"></script>
 
-		<script>
+		<!-- <script>
 			AOS.init();
-		  </script>
+		  </script> -->
     </body>
 </html>
