--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 				<li><a href="process.html">PROCESS</a></li>
 				<li><a href="#">IMPULSFRAGEN</a></li>
 				<li><h2>STUDIO</h2></li>
-				<li><a href="galerie.html">GALERIE</a></li>
+				<li><a href="#">GALERIE</a></li>
 				<li><h2>PORTFOLIO</h2></li>
 				<li><a href="philo.html">PHILOSOPHIE</a></li>
 				<li><a href="about.html">ABOUT ME</a></li>
@@ -226,7 +226,15 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 
 
 
+<footer>
+<div class="footer-left">
+	<p class="footer">VIA IDA </p> <p>| &#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
+</div>
+		<div class="footer-right"> <p>KONTAKT | IMPRESSUM</p> 
 
+		</div>
+
+</footer>
 
 
 
