--- a/process.html
+++ b/process.html
@@ -28,7 +28,7 @@
 				<li><a href="process.html">PROCESS</a></li>
 				<li><a href="#">IMPULSFRAGEN</a></li>
 				<li><h2>STUDIO</h2></li>
-				<li><a href="galerie.html">GALERIE</a></li>
+				<li><a href="#">GALERIE</a></li>
 				<li><h2>PORTFOLIO</h2></li>
 				<li><a href="philo.html">PHILOSOPHIE</a></li>
 				<li><a href="about.html">ABOUT ME</a></li>
@@ -99,7 +99,15 @@
 <!-- <img src="/img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" style="display: block; width:100%; height: auto; margin: auto;" alt=" alt=""> -->
 
 
-
+<footer>
+	<div class="footer-left">
+		<p class="footer">VIA IDA </p> <p>| &#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
+	</div>
+			<div class="footer-right"> <p>KONTAKT | IMPRESSUM</p> 
+	
+			</div>
+	
+	</footer>
 
 <svg class="cursor" width="80" height="80" viewBox="0 0 80 80">
     <circle class="cursor__inner" cx="40" cy="40" r="20"></circle>
