--- a/index.html
+++ b/index.html
@@ -225,16 +225,15 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 	</div>
 
 
-
-<footer>
-<div class="footer-left">
-	<p class="footer">VIA IDA </p> <p>| &#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
-</div>
-		<div class="footer-right"> <p>KONTAKT | IMPRESSUM</p> 
-
+	<footer>
+		<div class="footer-left">
+			<p class="footer">VIA IDA </p> <p>&#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
 		</div>
-
-</footer>
+				<div class="footer-right"> <p>KONTAKT | IMPRESSUM</p> 
+		
+				</div>
+		
+		</footer>
 
 
 
