--- a/process.html
+++ b/process.html
@@ -101,7 +101,7 @@
 
 <footer>
 	<div class="footer-left">
-		<p class="footer">VIA IDA </p> <p>| &#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
+		<p class="footer">VIA IDA </p> <p>&#169;</p> <p><script>document.write(new Date().getFullYear());</script></p>
 	</div>
 			<div class="footer-right"> <p>KONTAKT | IMPRESSUM</p> 
 	
