--- a/kundenstimmen.html
+++ b/kundenstimmen.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="base.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.1/imagesloaded.pkgd.min.js"></script>
     </head>
@@ -41,7 +43,8 @@
         
 
         <div class="header">
-          <h1 class="text-title">THE VALUE OF COACHING</h1>
+          <h1>VIA IDA</h1>
+                <h2>THE VALUE OF COACHING</h2>
         </div>
   
 
