--- a/methods.html
+++ b/methods.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
 
 		<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
@@ -41,8 +43,13 @@
 			</ul>
 		</nav>
 		
-		<div style="background-color: black;">
-			<h1 style="text-align: center; padding: 2rem;">METHODS</h1>
+		<!-- <div style="background-color: black;">
+			<h1 style="text-align: center; padding: 2rem;"></h1>
+		</div> -->
+
+    <div class="header">
+			<h1>VIA IDA</h1>
+            <h2>METHODS</h2>
 		</div>
 
         <div  class="parent"  style="background-color: black; ">
