--- a/process.html
+++ b/process.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="base.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -37,6 +39,10 @@
 			</ul>
 		</nav>
 		
+		<div class="header">
+			<h1>VIA IDA</h1>
+            <h2>PROCESS</h2>
+		</div>
 
 <div class="process">
     <h1 style="text-align: center;">STEPS WE GO</h1>
