--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -37,8 +39,9 @@
 			</ul>
 		</nav>
 		
-		<div class="header">
-			<h1 class="text-title">ABOUT ME</h1>
+        <div class="header">
+			<h1>VIA IDA</h1>
+            <h2>ABOUT ME</h2>
 		</div>
 
         <div class="parent" style="padding: 2rem;">
