--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="shortcut icon" href="#">
 		<!-- <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
 		<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
 	
 
