--- a/process.html
+++ b/process.html
@@ -41,14 +41,14 @@
 		
 		<div class="header">
 			<h1>VIA IDA</h1>
-            <h2>PROCESS</h2>
+            <h2>STEPS WE GO</h2>
 		</div>
 
 <div class="process">
-    <h1 style="text-align: center;">STEPS WE GO</h1>
-    <h2>DAS ERSTGESPRÄCH</h2>
+    
+    <h3>DAS ERSTGESPRÄCH</h3>
     <p>Was erhoffst du dir? Wie kann ich dich unterstützen? Wir hören I sehen uns via Telefon oder Zoom Call. Dauer 30 – 45 Minuten. Kosten keine.</p>
-    <h2>ETAPPEN UNSERER ZUSAMMENARBEIT</h2>
+    <h3>ETAPPEN UNSERER ZUSAMMENARBEIT</h3>
 	
 	<div class="timeline-item" frage='WAS'>
 		
