--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 		<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
 	
 
