--- a/process.html
+++ b/process.html
@@ -45,11 +45,15 @@
 		</div>
 
 <div class="process">
+
+	<div class="process-intro">
+		<h3>DAS ERSTGESPRÄCH</h3>
+		<p>Was erhoffst du dir? <br> Wie kann ich dich unterstützen? <br> Wir hören oder sehen uns via Telefon oder Zoom Call. <br> Dauer: 30 – 45 Minuten. <br> Kosten: keine.</p>
+		
+	</div>
     
-    <h3>DAS ERSTGESPRÄCH</h3>
-    <p>Was erhoffst du dir? Wie kann ich dich unterstützen? Wir hören I sehen uns via Telefon oder Zoom Call. Dauer 30 – 45 Minuten. Kosten keine.</p>
-    <h3>ETAPPEN UNSERER ZUSAMMENARBEIT</h3>
-	
+    
+	<h3 style="text-align: center; padding-bottom: 3rem;">ETAPPEN UNSERER ZUSAMMENARBEIT</h3>
 	<div class="timeline-item" frage='WAS'>
 		
 		<p>
