--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
         <div class="parent" style="padding: 2rem;">
   
-                <img class="img" style="max-height: 800px; width: auto;" src="img/about/Bild Franziska about me .jpg" alt="">
+                <img class="img"  src="img/about/Bild Franziska about me .jpg" alt="">
 
                 
             <div class="txt">
