--- a/process.html
+++ b/process.html
@@ -89,19 +89,25 @@
 	
 </div>
 
-<div style="text-align: center; margin-top: 0; padding: 2em; background-color: black; color: white;">
+<div style="text-align: center; margin-top: 0; padding: 2rem 0 2rem 0; background-color: black; color: white;">
 	<p>THE CLOTHING Die Kleider können an jeder Phase eingebunden werden. Alles kann. Nichts muss. </p>
 <h2>WIRKLICHKEIT: 
     INNERE ERKENNEN. ÄUSSERE VERÄNDERN. 
     </h2>
     <h2>WERTVOLL JEDER DEINER SCHRITTE. TAKE, the <a href="kontakt.html">first Step</a>.
     </h2>
+	<div style="width: 100%;">
+
+		<img src="img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" style="display: block; width:100%; max-width: 800px;  height: auto; margin: auto;" alt="">
+	</div>
 </div>
 
-<div style="text-align: center; margin-top: 0; padding: 20%; background-image: url(img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg); background-repeat:no-repeat; background-size: cover; ">
+
+
+<!-- <div style="text-align: center; margin-top: 0; padding: 20%; background-image: url(img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg); background-repeat:no-repeat; background-size: cover; ">
 	
     
-</div>
+</div> -->
 
 
 
