--- a/process.html
+++ b/process.html
@@ -89,6 +89,29 @@
 	
 </div>
 
+
+
+<div class="parent " style="background-color: black; ">
+    
+	<div class="txt" style="color: white;">
+		<p>THE CLOTHING Die Kleider können an jeder Phase eingebunden werden. Alles kann. Nichts muss. </p>
+<h2>WIRKLICHKEIT: 
+    INNERE ERKENNEN. ÄUSSERE VERÄNDERN. 
+    </h2>
+    <h2>WERTVOLL JEDER DEINER SCHRITTE. TAKE, the <a href="kontakt.html">first Step</a>.
+    </h2>
+	   
+	  </div>
+	  <img class="img" src="img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" alt="">
+	
+		<!-- <div class="img" style="background: url(img/concept/Bild\ Concept\ Wahrheiten\ gestalten\ Abstrakt.jpg) center center no-repeat; background-size: cover; max-width: 700px; "></div>
+	</div> -->
+</div>  
+
+
+
+
+<!-- 
 <div style="text-align: center; margin-top: 0; padding: 2rem 0 2rem 0; background-color: black; color: white;">
 	<p>THE CLOTHING Die Kleider können an jeder Phase eingebunden werden. Alles kann. Nichts muss. </p>
 <h2>WIRKLICHKEIT: 
@@ -100,7 +123,7 @@
 
 		<img src="img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" style="display: block; width:100%; max-width: 800px;  height: auto; margin: auto;" alt="">
 	</div>
-</div>
+</div> -->
 
 
 
