--- a/galerie.html
+++ b/galerie.html
@@ -25,6 +25,26 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 	
 	<body class="demo-2 loading">
 
+        <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+		<label for="menu-icon"></label>
+		<nav class="nav"> 		
+			<ul>
+				<li><a href="index.html"> <h2 style="color: white;">HOME</h2></a></li>
+				<li><h2>COACHING</h2></li>
+				<li><a href="concept.html">CONCEPT</a></li>
+				<li><a href="methods.html">METHODS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="#">IMPULSFRAGEN</a></li>
+				<li><h2>STUDIO</h2></li>
+				<li><a href="galerie.html">GALERIE</a></li>
+				<li><h2>PORTFOLIO</h2></li>
+				<li><a href="philo.html">PHILOSOPHIE</a></li>
+				<li><a href="about.html">ABOUT ME</a></li>
+				<li><a href="kundenstimmen.html">KUND:INNEN</a></li>
+				<li><a href="kontakt.html"> <h2 style="color: white;">Kontakt</h2></a></li>
+			</ul>
+		</nav>
+
 <div style="position: absolute; text-align: center; width: 100vw; height: 100vh; ">
 
 	<video style="width: 100%;object-fit: cover;" autoplay muted loop>
