--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 				<li><a href="process.html">PROCESS</a></li>
 				<li><a href="#">IMPULSFRAGEN</a></li>
 				<li><h2>STUDIO</h2></li>
-				<li><a href="#">GALERIE</a></li>
+				<li><a href="galerie.html">GALERIE</a></li>
 				<li><h2>PORTFOLIO</h2></li>
 				<li><a href="philo.html">PHILOSOPHIE</a></li>
 				<li><a href="about.html">ABOUT ME</a></li>
