--- a/concept.html
+++ b/concept.html
@@ -100,6 +100,10 @@
 		
 		<script src="new.js"></script>
 
-        <script src="" async defer></script>
+        <script>
+
+
+
+        </script>
     </body>
 </html>
