--- a/philo.html
+++ b/philo.html
@@ -58,11 +58,11 @@
             </div> -->
         </div>  
 
-        <div class="parent"  style="background-color: black; ">
+        <div class="parent"  style="background-color: black;">
   
-            <div style="display: flex; flex-direction: column;">
-                <img src="img/philo/IMG_E2115.JPG" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
-                <img src="img/philo/blanche-peulot-73fpQysLaKM-unsplash.jpg" style="width:100%; max-width: 400px; padding: 2em; height: auto; border-radius: 50%;" alt="">
+            <div style="display: flex; flex-direction: column; align-content: center;justify-content: space-evenly; flex-wrap: wrap;">
+                <img class="img-round-double" src="img/philo/IMG_E2115.JPG"  alt="">
+                <img class="img-round-double" src="img/philo/blanche-peulot-73fpQysLaKM-unsplash.jpg" alt="">
             </div>
            
             <!-- <div class="img" style="background: url(img/concept/Bild\ Concept\ Wahrheiten\ finden\ Abstrakt.jpg) center center no-repeat; background-size: cover; max-width: 700px; "></div> -->
