--- a/process.html
+++ b/process.html
@@ -94,15 +94,15 @@
 <div class="parent " style="background-color: black; ">
     
 	<div class="txt" style="color: white;">
-		<p>THE CLOTHING Die Kleider können an jeder Phase eingebunden werden. Alles kann. Nichts muss. </p>
-<h2>WIRKLICHKEIT: 
-    INNERE ERKENNEN. ÄUSSERE VERÄNDERN. 
+		<p> <span style="font-weight: 900;" >THE CLOTHING</span> <br> Die Kleider <em>können</em> an jeder Phase eingebunden werden. Alles kann. Nichts muss. </p>
+<h2>WIRKLICHKEIT: <br>
+    INNERE ERKENNEN. <br> ÄUSSERE VERÄNDERN. 
     </h2>
-    <h2>WERTVOLL JEDER DEINER SCHRITTE. TAKE, the <a href="kontakt.html">first Step</a>.
+    <h2>WERTVOLL: <br> JEDER DEINER SCHRITTE. <br> TAKE the <a href="kontakt.html">first Step</a>.
     </h2>
 	   
 	  </div>
-	  <img class="img" src="img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" alt="">
+	  <img class="img-round" src="img/process/olga-thelavart-1nrY9CLAGcI-unsplash.jpg" alt="">
 	
 		<!-- <div class="img" style="background: url(img/concept/Bild\ Concept\ Wahrheiten\ gestalten\ Abstrakt.jpg) center center no-repeat; background-size: cover; max-width: 700px; "></div>
 	</div> -->
