--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" type="text/css" href="base.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -68,8 +70,8 @@
 <div style="background-color: black; display: flex; flex-direction: column; flex-wrap: wrap; align-items: center; justify-content: center; padding-top: 5em;" >
 
     
-    <p style="text-align: center; color: white;">VIA IDA BECAUSE OF YOU.
-        IT’S ALL ABOUT YOU, <a href="kontakt.html">WHAT DO YOU WANT</a>.</p>
+    <h2 style="text-align: center; color: white;">VIA IDA BECAUSE OF YOU. <br>
+        IT’S ALL ABOUT YOU, <br> <a href="kontakt.html">WHAT DO YOU WANT</a>.</h2>
 
         
 
