--- a/concept.html
+++ b/concept.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" type="text/css" href="base.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -48,7 +50,7 @@
   
             <img class="img" src="img/concept/Bild Concept Wahrheiten finden Abstrakt.jpg" alt="">
             <div class="txt">
-              <h3>WAHRHEITEN FINDEN</h3>
+              <h2>WAHRHEITEN FINDEN</h2>
               <p><span class="first-letter">V</span>ALUE <br> Werte, Normen, Rollen sind wesentliche Aspekte von Identität. Sie zeigen unsere Beziehung zwischen den persönlichen und den gesellschaftlichen Wertigkeiten. </p>
                <p><span class="first-letter">I</span>MAGE <br> Bilder machen Inneres I Äusseres sichtbar, aktivieren Ressourcen, unterstützen die Introspektive. Sie bilden eine Brücke zwischen bewusster I nicht bewusster Welt.</p>
 			 <p> <span class="first-letter">A</span>RT <br> Die Art zu leben: zu denken, zu sprechen, zu handeln, zu fühlen, ….konstruiert unsere Wirklichkeit. Sie existiert auch in der Art sich zu kleiden.</p>
