--- a/galerie.html
+++ b/galerie.html
@@ -8,10 +8,13 @@
 		<meta name="keywords" content="locomotive scroll, scroll animation, website, javascript, demo">
 		<meta name="author" content="Codrops">
 		<link rel="shortcut icon" href="/favicon.26242483.ico">
-		<link rel="stylesheet" href="https://use.typekit.net/rmd7deq.css">
+		<!-- <link rel="stylesheet" href="https://use.typekit.net/rmd7deq.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.98fd6c19.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-		<script>document.documentElement.className = "js";
+		<!-- <script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
   var e,
@@ -19,8 +22,10 @@ var supportsCssVars = function supportsCssVars() {
   return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e;
 };
 
-supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	<script src="base.98fd6c19.js"></script><script src="index2.js"></script></head>
+supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script> -->
+	<script src="base.98fd6c19.js"></script>
+	<!-- <script src="index2.js"></script> -->
+</head>
 
 	
 	<body class="demo-2 loading">
