--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<link rel="stylesheet" type="text/css" href="base.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+
+
+
 		<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
 	
 
@@ -30,7 +35,8 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 	<script src="jq.js"></script> -->
 
 </head>
-	<body class="" >
+
+	<body>
 
 
 
@@ -168,7 +174,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 					</div>
 					<div class="grid__item pos-2t"><a href="kundenstimmen.html" > <h4>LEBEN FREUDE. <br> VOR ALTER <br> KONVENTIONEN.</h4></a>  </div>
 					<div class="grid__item pos-3t"><a href="kundenstimmen.html" > <h4>WERTE. ECHTE. <br> KOMPLIMENTE. </h4></a> </div>
-					<div class="grid__item pos-4t"><a href="kundenstimmen.html" > <h4>SELBST. <br> SICHER. <br> ALLE ROLLEN.</h4> </a> </div>
+					<div class="grid__item pos-4t" ><a href="kundenstimmen.html" > <h4>SELBST. <br> SICHER. <br> ALLE ROLLEN.</h4> </a> </div>
 					<div class="grid__item pos-5t"><a href="kundenstimmen.html" > <h4>FRAU.  MANN. <br> ICH. <br> ÜBERZEUGE.</h4></a>  </div>
 					<div class="grid__item pos-6t"><a href="kundenstimmen.html" > <h4>EINE ENTSCHEIDUNG. <br> FÜHLBAR ICH.</h4></a>  </div>
 					<div class="grid__item pos-7t"><a href="kundenstimmen.html" > <h4>ICH BIN. <br> STOLZ. <br> AUF MICH.</h4></a>  </div>
@@ -188,10 +194,10 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 	<div class="parent">
   
 		<!-- <div class="img" style="background: url(img/landing/ValueCoachingClothing.jpg) center no-repeat;"></div> -->
-		<img class="img-round" src="img/landing/ValueCoachingClothing.jpg"  alt="">
+		<img class="img-round" data-aos="fade-right" data-aos-duration="1000" src="img/landing/ValueCoachingClothing.jpg"  alt="">
 		
-		<div class="txt">
-		  <h2>THE VALUE OF COACHING. CLOTHING.</h2>
+		<div class="txt" data-aos="fade-left" data-aos-duration="1000">
+		  <h2 >THE VALUE OF COACHING. CLOTHING.</h2>
 		  <p>VIA IDA eröffnet neue Wege, erweitert den Blickwinkel. <br> VIA IDA verwendet Kleider als ergänzenden methodischen Ansatz im Coachingprozess.</p>
 		  <h2>EINE TRAGENDE <a href="methods.html">TRANSFORMATION</a></h2>
 		</div>
@@ -199,26 +205,26 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 	</div>
 	<div class="parent " style="background-color: #152A2B;">
 
-		<div class="txt" style="color: white;">
+		<div class="txt" data-aos="fade-right" data-aos-duration="1000" style="color: white;">
 			<h2>THE VALUE OF CHANGE</h2>
 			<p>VIA IDA ist überzeugt, Veränderung macht erst Sinn, wenn sie deiner inneren Wirklichkeit folgt. Deine Wahrheiten sind essentiell. Mit diesem Bewusstsein fällt es dir leichter deine wirklichen Ziele, Wünsche, Träume zu erkennen und zu verwirklichen.
 			</p>
 			<h2>WAHRHEITEN FINDEN – <a href="concept.html">WIRKLICHKEIT GESTATLEN</a></h2>
 		  </div>
 		
-		  <img class="img-round" src="img/landing/ValueofChange.jpg"  alt="">
+		  <img class="img-round" data-aos="fade-left" data-aos-duration="1000" src="img/landing/ValueofChange.jpg"  alt="">
 
 		<!-- <div class="img" style="background: url(img/landing/ValueofChange.jpg) center center no-repeat; background-size: cover;"></div> -->
 	  </div>
 
 	  <div class="parent">
   
-		<img class="img" src="img/landing/BildEndeLandingPage.jpg"  alt="">
+		<img class="img" data-aos="fade-right" data-aos-duration="1000" src="img/landing/BildEndeLandingPage.jpg"  alt="">
 
 		<!-- <div class="img" style="background: url(img/landing/BildEndeLandingPage.jpg) center center no-repeat; background-size: cover;"></div> -->
 		
-		<div class="txt">
-		  <h2>THE UNIQUENESS OF CHANGE: YOURSELF</h2>
+		<div class="txt" data-aos="fade-left" data-aos-duration="1000">
+		  <h2 >THE UNIQUENESS OF CHANGE: YOURSELF</h2>
 		  <p>Deinen Wahrheiten und Überzeugungen sichtbar Bedeutung geben. Deinen Talenten, Wünschen, Träumen sichtbar Raum geben.</p>
 		  <h2>WERDE SICHTBAR. OPEN THE SPACE. </h2>
 		  <h2> <a href="kontakt.html"> TELL ME.</a> </h2>
@@ -250,7 +256,7 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
         <svg class="cursor" width="80" height="80" viewBox="0 0 80 80">
 			<circle class="cursor__inner" cx="40" cy="40" r="20"></circle>
 		</svg>
-
+	
 
 		<!-- <script src="viaida.js"></script> -->
 		<script src="new.js"></script>
