--- a/process.html
+++ b/process.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="base.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 7]>
