--- a/galerie.html
+++ b/galerie.html
@@ -11,8 +11,9 @@
 		<!-- <link rel="stylesheet" href="https://use.typekit.net/rmd7deq.css"> -->
 		<link rel="stylesheet" type="text/css" href="base.98fd6c19.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 		<!-- <script>document.documentElement.className = "js";
 
